--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="flex mediaquery">
-            <div id="logotipo"></div>
+            <a href="index.html" class="logotipo"><div id="logotipo"></div></a>
             <div id="login-user">
                 <a href=""><i class="fa-solid fa-user"></i> Meu usuário</a>
                 <p>entre ou cadastre-se</p>
@@ -22,7 +22,7 @@
         <section id="search-job" class="flex">
             <div class="mediaquery">
                 <h1>PESQUISE POR OPORTUNIDADES (INSCRIÇÕES ABERTAS)</h1>
-                <form action="" method="post" class="flex">
+                <form action="#" method="post" class="flex">
                     <div>
                         <input type="text" name="palavrachave" id="palavrachave" placeholder="PALAVRA-CHAVE | ADMINISTRAÇÃO, MARKETING, REMOTO">
                     </div>
@@ -42,7 +42,7 @@
                 <div>
                     <i class="fa-solid fa-calendar-days vermelho"></i><h3>termina hoje</h3>
                 </div>
-                <a href="" class="bt-vaga">PARTICIPAR</a><a href="" class="bt-vaga2">DETALHES</a>
+                <a href="" class="bt-vaga">PARTICIPAR</a><a href="detalhes.html" class="bt-vaga2">DETALHES</a>
             </div>
         </section>
     </main> 
