--- a/detalhes.html
+++ b/detalhes.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="flex mediaquery">
-            <div id="logotipo"></div>
+            <a href="index.html" class="logotipo"><div id="logotipo"></div></a>
             <div id="login-user">
                 <a href=""><i class="fa-solid fa-user"></i> RUAN</a>
             </div>
