--- a/detalhes.html
+++ b/detalhes.html
@@ -18,7 +18,7 @@
         </div>
     </header>
     <main>
-        <section id="info-job" class="flex">
+        <div id="info-job" class="flex">
             <div class="mediaquery" id="informations-job">
                 <h1>BDR - Prospecção e Qualificação de Leads - remoto - PJ</h1> 
                 <div>
@@ -33,12 +33,12 @@
                     <a href="" title="Compartilhar - E-mail"><i class="fa-solid fa-square-envelope"></i></a>
                 </div>              
             </div>
-        </section>
-        <section id="vagas-abertas">
+        </div>
+        <section id="detalhe-vaga">
             <div class="mediaquery vaga">
                 <h1>BDR - Prospecção e Qualificação de Leads - remoto - PJ</h1>
                 <div class="divisor"></div>
-                <h2>Estamos em busca de um BDR motivado e proativo para se juntar à nossa equipe comercial. Sua principal tarefa será a qualificação de contatos por telefone, e-mail e redes sociais com o objetivo de agendar reuniões para o time de vendas.</h2>
+                    <h2>Estamos em busca de um BDR motivado e proativo para se juntar à nossa equipe comercial. Sua principal tarefa será a qualificação de contatos por telefone, e-mail e redes sociais com o objetivo de agendar reuniões para o time de vendas.</h2>
                 <div class="divisor"></div>
                 <div>
                     <i class="fa-solid fa-location-dot"></i><h3>Remoto - Brasil</h3>
