--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <main>
-        <section id="search-job" class="flex">
+        <div id="search-job" class="flex">
             <div class="mediaquery">
                 <h1>PESQUISE POR OPORTUNIDADES (INSCRIÇÕES ABERTAS)</h1>
                 <form action="#" method="post" class="flex">
@@ -29,7 +29,7 @@
                     <button type="submit">BUSCAR</button>
                 </form>
             </div>
-        </section>
+        </div>
         <section id="vagas-abertas">
             <div class="mediaquery vaga">
                 <h1>BDR - Prospecção e Qualificação de Leads - remoto - PJ</h1>
